examples/test/testpolicy12688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12688
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key47: value7
      key8: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value24
          key47: value10
          key11: value48
      podSelector:
        matchLabels:
          key37: value4
          key27: value12
